--- a/.github/workflows/update_github_myprofile.yaml
+++ b/.github/workflows/update_github_myprofile.yaml
@@ -15,8 +15,8 @@ jobs:
         python3 update.py
         git init
         git config --local user.name "${GITHUB_ACTOR}"
-        git config --local user.email "windvchen@gmail.com"
-        export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GHRS_GITHUB_API_TOKEN }}@github.com/WindVChen/WindVChen.git"
+        git config --local user.email "945808891@qq.com"
+        export remote_repo="https://${GITHUB_ACTOR}:${{ secrets.GHRS_GITHUB_API_TOKEN }}@github.com/Chen-Yang-Liu/Chen-Yang-Liu.git"
         git add README.md
         git commit -m "update my description automatically"
         git push "${remote_repo}" HEAD:main --force
