--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :
 # Site Author
 author:
   name             : "Chenyang Liu <br /> (刘辰阳)"
-  avatar           : "images/android-chrome-512x512.jpg"
+  avatar           : "images/android-chrome-512x512.png"
   bio              : "LEVIR Group"
   location         : "Beijing"
   employer         :
