--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Selected Honors and Awards"
+  - title: "Selected Honors"
     url: "/#-honors-and-awards"
 
   - title: "Educations"
