--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: "/#-publications"
 
   - title: "Selected Honors"
-    url: "/#-honors-and-awards"
+    url: "/#-selected-honors"
 
   - title: "Educations"
     url: "/#-educations"
