--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Chenyang Liu (刘辰阳)"
-description              : "Pursuing master's degree in LEVIR group, Beihang. Focusing on AISafety, image synthesis, and remote sensing image processing."
+description              : "Pursuing master's degree in LEVIR group, Beihang. Focusing on machine learning, remote sensing image processing, and multimodal learning."
 repository               : "Chen-Yang-Liu/Chen-Yang-Liu.github.io"
 google_scholar_stats_use_cdn : true
 
