--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Chenyang Liu (刘辰阳)"
-description              : "Pursuing master's degree in LEVIR group, Beihang. Focusing on remote sensing image processing, deep learning, and multimodal learning."
+description              : "Ph.D. Student, Beihang University."
 repository               : "Chen-Yang-Liu/Chen-Yang-Liu.github.io"
 google_scholar_stats_use_cdn : true
 
