--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,19 +1,25 @@
 # main links links
 main:
-  - title: "About Me"
-    url: "/#about-me"
+  # - title: "About Me"
+  #   url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
+  - title: "Update"
+    url: "/#-update"
 
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Selected Honors"
-    url: "/#-selected-honors"
+  - title: "Selected Honors and Grants"
+    url: "/#-selected-honors-and-grants"
+
+  - title: "Employments"
+    url: "/#-employments"
 
   - title: "Educations"
     url: "/#-educations"
+
+  - title: "Family Members"
+    url: "/#-family-members"
 
 #  - title: "Invited Talks"
 #    url: "/#-invited-talks"
