--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "leyuan-sun"
+  github           : #"leyuan-sun"
   google_plus      :
   keybase          :
   instagram        :
